// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testuser Error when storing test user without test token 1`] = `
Object {
  "data": Object {
    "test": Object {
      "user": "Not a valid test token",
    },
  },
}
`;

exports[`Testuser can store test user 1`] = `
Object {
  "data": Object {
    "test": Object {
      "user": Object {
        "accounts": Array [
          Object {
            "agency": Object {
              "agencyId": "716300",
              "agencyName": "Herlev Bibliotek",
            },
            "blocked": false,
            "cpr": "0101011234",
            "debt": "100",
            "isMunicipality": true,
            "uniqueId": "test:469b0831-1eef-5aca-bbe6-f6519fd922c9",
          },
          Object {
            "agency": Object {
              "agencyId": "715100",
              "agencyName": "Ballerup Bibliotekerne",
            },
            "blocked": false,
            "cpr": null,
            "debt": null,
            "isMunicipality": false,
            "uniqueId": "test:ce0da062-c974-5150-9749-252adcd92db7",
          },
          Object {
            "agency": Object {
              "agencyId": "190101",
              "agencyName": "nemlogin",
            },
            "blocked": false,
            "cpr": "0101011234",
            "debt": null,
            "isMunicipality": false,
            "uniqueId": "test:469b0831-1eef-5aca-bbe6-f6519fd922c9",
          },
        ],
      },
    },
  },
}
`;

exports[`Testuser parser can parse test token 1`] = `
Object {
  "accessToken": "d66828f989e1184g0d51g1dcdf9d9985ecdcb6ed",
  "testUser": Object {
    "key": "kfu",
    "loginAgency": "nemlogin",
  },
}
`;

exports[`Testuser test user can be fetched 1`] = `
Object {
  "data": Object {
    "test": Object {
      "user": Object {
        "accounts": Array [
          Object {
            "agency": Object {
              "agencyId": "190101",
              "agencyName": "nemlogin",
            },
            "blocked": false,
            "cpr": "0101011234",
            "debt": null,
            "isMunicipality": false,
            "uniqueId": "test:469b0831-1eef-5aca-bbe6-f6519fd922c9",
          },
        ],
      },
    },
  },
}
`;

exports[`Testuser test user is null without test token 1`] = `
Object {
  "data": Object {
    "test": Object {
      "user": null,
    },
  },
}
`;
